# backup_tool

./: .env.dist  .gitignore  README.MD  backup.sh  install.sh  pyproject.toml  requirements.txt
backup_tool/: __main__.py
